2010-09-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: avoid distcheck failure with --disable-ltdl-install.
	* tests/ltdl-libdir.at (libdir of installed modules): Skip if
	$LIBLTDL does not exist.

2010-09-18  Gary V. Vaughan  <gary@gnu.org>

	maint: use sed instead of maintaining 2 README files.
	* README.alpha: Deleted.  It was mostly identical to README.
	* libltdl/config/edit-readme-alpha: New script to edit the
	contents of README in the dist tree prior to tarring up.
	* Makefile.am (dist-hook): Run it before rolling alpha release
	tarball.

	maint: improve README's `Obtaining the Latest Sources'.
	* README (Obtaining the Latest Sources): Add instructions for
	obtaining stable, alpha and nightly snapshot tarballs.
	* README.alpha (Obtaining the Latest Sources): Adjust to match.

	maint: reformat README `The Test Suites' for consistency.
	* README (The Test Suites): Reformatted for consistency.
	* README.alpha (The Test Suites): Adjust to match.

	maint: improve `Reporting Bugs' in README and README.alpha.
	* README (Reporting Bugs): Rewritten to a more complete and
	concise guide to providing a good bug report.
	* README.alpha (Reporting Bugs): Adjust to match.

	maint: consolidate Introductions of README and README.alpha.
	* README (Introduction): Rewritten to a more logical order for
	first time users, incorporating some additional text that was
	previously only in README.alpha.
	* README.alpha (Introduction): Adjust to match.

	maint: copy the Version Numbering section into README.alpha.
	* README.alpha (Version Numbering): No less useful for users
	of alpha releases.  Copied from README.

2010-09-17  Peter Rosin  <peda@lysator.liu.se>

	tests: actually detect missing 'test' in 'if "$foo" = ...'.
	* tests/sh.test: Remove extra backslash in regex.

	Copy over DLL_EXPORT handling from C to C++ for non-GCC on w32.
	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [mingw, cygwin, os2]
	[pw32, cegcc]: Copy over the DLL_EXPORT handling from C to C++.
