@@ -1,3 +1,10 @@
+2010-09-19  Peter Rosin  <peda@lysator.liu.se>
+
+	tests: Import items from liba1 for MSVC.
+	* tests/lt_dlexit.at (b1.c) [MSVC]: Import function f1 and
+	variable v1 from liba1 when using them from modb1.  Makes the
+	test pass on MSVC.
+
 2010-09-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	tests: avoid distcheck failure with --disable-ltdl-install.
